# actix-microservice

./: .env  Cargo.toml  diesel.toml
migrations/2025-06-30-124940_users/: up.sql
migrations/2025-06-30-130550_roles/: up.sql
src/: .env  config.rs  db.rs  lib.rs  main.rs  schema.rs
src/models/: role.rs  user.rs
test/: quick_dev.rs
