[package]
name = "rust-actix-backend-engineering"
version = "0.1.0"
edition = "2021"

[dependencies]

axum="0.8.4"
serde={version ="1.0.197", features=["derive"]}
dotenv={version="0.15.0"}
diesel={version="2.2.0", features=["postgres", "r2d2", "chrono"]}
tokio={version="1.45.0", features=["full"]}
tower="0.5.2"
actix={version="0.13.5"}
uuid = { version = "1", features = ["v4"] }
chrono = {version="0.4", features=["serde"]}
serde_json ="1"

[dev-dependencies]
anyhow="1"
httpc-test ="0.1.1"